# Riko

./: .env.example  .gitignore  Cargo.toml  README.md
src/: keys.rs  main.rs  models.rs
src/commands/: admin.rs  math.rs  meta.rs  mod.rs  otaku.rs  owner.rs
src/utils/: keys.rs
