[package]
name = "riko"
version = "0.1.0"
authors = ["KurozeroPB <root@kurozeropb.info>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.6.2"
kankyo = "0.3.0"
log = "0.4.8"
reqwest = "0.9"
time = "0.1.42"
typemap = "0.3.3"
num-integer = "0.1.41"
chrono = "0.4.9"
serde = "1.0.100"
serde_derive = "1.0.100"
wither = "0.8.0"
wither_derive = "0.8.0"
mongodb = "0.3.12"
kitsu = { git = "https://github.com/KurozeroPB/kitsu.rs" }

[dependencies.serenity]
version = "0.7.0"
features = ["cache", "framework", "standard_framework", "rustls_backend"]